# advent-of-code-2020

./: .gitignore  README.md  pyproject.toml
go/day1/: f.go
go/day2/: main.go
go/day3/: main.go
go/day4/: main.go
lua/day1/: a.lua
python/day1/: p.py
python/day10/: p.py
python/day11/: p.py
python/day12/: p.py
python/day13/: p.py
python/day14/: p.py
python/day15/: p.py
python/day2/: o.py
python/day3/: p.py
python/day4/: p.py
python/day5/: p.py
python/day6/: p.py
python/day7/: p.py
python/day8/: p.py
python/day9/: p.py
